deploy/argocd/apps/kyverno/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/part-of: kyverno
    # Exclude from default-deny policies
    pod-security.kubernetes.io/enforce: privileged
